# avocado-challenge-tasks-manager

./: .env.example  .gitignore  README.md  REPORTE.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  TESTING_GUIDE.md  TEST_SUMMARY.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 116010427eaa_initial_migration_users_tasks_comments.py
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/v1/: api.py  auth.py  comments.py  tasks.py  users.py
backend/app/core/: __init__.py  exceptions.py  security.py
backend/app/crud/: __init__.py  comment.py  task.py  user.py
backend/app/db/: base.py  session.py
backend/app/middleware/: __init__.py
backend/app/models/: __init__.py  comment.py  task.py  user.py
backend/app/schemas/: __init__.py  comment.py  common.py  task.py  user.py
backend/tests/: README.md  __init__.py  conftest.py  test_auth.py  test_comments.py  test_tasks.py
frontend/: Dockerfile.dev  cypress.config.cjs  cypress.config.ts  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/cypress/e2e/: login.cy.ts  smoke.cy.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  client.ts  tasks.ts  users.ts
frontend/src/components/: Layout.tsx  ProtectedRoute.tsx  RoleProtectedRoute.tsx  TaskComments.tsx  TaskForm.tsx  ThemeToggle.tsx
frontend/src/constants/: roles.ts
frontend/src/pages/: AdminDashboard.tsx  AdminStatistics.tsx  Dashboard.tsx  Login.tsx  (+4 more)
(+5 files in other folders)
